--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@nestjs/swagger": "^7.3.0",
     "@prisma/client": "^5.10.2",
     "axios": "^1.6.7",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "passport-http-bearer": "^1.0.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
