feat: health check

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.3.0",
+    "@nestjs/terminus": "^10.2.3",
     "@prisma/client": "^5.10.2",
     "axios": "^1.6.7",
     "class-transformer": "^0.5.1",
