--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["dbml", "infoteam", "libvips", "nestjs"]
+  "cSpell.words": ["dbdocs", "dbml", "infoteam", "libvips", "nestjs"]
 }
