--- a/.github/workflows/erd.yml
+++ b/.github/workflows/erd.yml
@@ -3,7 +3,7 @@ name: update erd
 on:
   push:
     paths:
-      - 'prisma/**'
+      - 'prisma/schema.prisma'
     branches:
       - master
 
@@ -31,3 +31,10 @@ jobs:
         run: dbdocs build ./prisma/dbml/schema.dbml
         env:
           DBDOCS_TOKEN: ${{ secrets.DBDOCS_TOKEN }}
+
+      - name: Commit and Push
+        run: |
+          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "GitHub Actions"
+          git commit -am "Update dbml"
+          git push -u origin master
