--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,13 @@
 {
-  "cSpell.words": ["dbdocs", "dbml", "infoteam", "libvips", "nestjs"]
+  "cSpell.words": [
+    "buildx",
+    "dbdocs",
+    "dbml",
+    "gitops",
+    "gsainfoteam",
+    "infoteam",
+    "libvips",
+    "nestjs",
+    "noreply"
+  ]
 }
