--- a/.github/workflows/erd.yml
+++ b/.github/workflows/erd.yml
@@ -13,7 +13,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+        with:
+          ssh-key: ${{ secrets.DBDOCS_COMMIT_KEY }}
 
       - name: Install prisma-dbml-generator
         run: sudo npm install -g prisma-dbml-generator
@@ -34,7 +37,7 @@ jobs:
 
       - name: Commit and Push
         run: |
-          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git config --global user.name "GitHub Actions"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "GitHub Actions [bot]"
           git commit -am "Update dbml"
           git push -u origin master
