--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -3,7 +3,7 @@ name: Update Kubernetes Cluster (Dev)
 on:
   push:
     branches:
-      - master
+      - main
     paths:
       - src/**
       - prisma/schema.prisma
