--- a/.github/workflows/erd.yml
+++ b/.github/workflows/erd.yml
@@ -40,4 +40,4 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global user.name "GitHub Actions [bot]"
           git commit -am "Update dbml"
-          git push -u origin master
+          git push -u origin main
