--- a/.github/workflows/erd.yml
+++ b/.github/workflows/erd.yml
@@ -35,7 +35,13 @@ jobs:
         env:
           DBDOCS_TOKEN: ${{ secrets.DBDOCS_TOKEN }}
 
+      - name: Check if there are any changes
+        id: check_changes
+        run: |
+          git diff --quiet . || echo "changed=true" >> "$GITHUB_OUTPUT"
+
       - name: Commit and Push
+        if: steps.check_changes.outputs.changed == 'true'
         run: |
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global user.name "GitHub Actions [bot]"
