--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-      ECR_REPOSITORY: vapor-auth-backend
+      ECR_REPOSITORY: groups-backend
       IMAGE_TAG: dev${{ github.run_number }}
 
     steps:
@@ -40,7 +40,7 @@ jobs:
         uses: docker/build-push-action@v2
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: vapor-auth-backend
+          ECR_REPOSITORY: groups-backend
           IMAGE_TAG: dev${{ github.run_number }} # Use run number as image tag
         with:
           context: .
@@ -67,7 +67,7 @@ jobs:
           ECR_REPOSITORY: ${{ needs.build.outputs.ECR_REPOSITORY }}
           IMAGE_TAG: ${{ needs.build.outputs.IMAGE_TAG }}
         run: |
-          sed -i "s|image:.*|image: $ECR_REGISTRY\/$ECR_REPOSITORY:$IMAGE_TAG|g" infoteam/service/vapor/auth.stg.yaml
+          sed -i "s|image:.*|image: $ECR_REGISTRY\/$ECR_REPOSITORY:$IMAGE_TAG|g" infoteam/service/groups/stg.yaml
 
       - name: Commit and Push
         env:
