--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@nestjs/terminus": "^10.2.3",
     "@prisma/client": "^5.17.0",
     "axios": "^1.6.7",
+    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "passport-http-bearer": "^1.0.1",
@@ -45,6 +46,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
