--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "ioredis": "^5.4.1",
+    "passport-http": "^0.3.0",
     "passport-http-bearer": "^1.0.1",
     "passport-oauth2": "^1.8.0",
     "reflect-metadata": "^0.2.0",
@@ -53,6 +54,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/passport-http": "^0.3.11",
     "@types/passport-http-bearer": "^1.0.41",
     "@types/passport-oauth2": "^1.4.17",
     "@types/supertest": "^6.0.0",
