--- a/package.json
+++ b/package.json
@@ -29,18 +29,20 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.3.0",
     "@nestjs/terminus": "^10.2.3",
     "@prisma/client": "^5.18.0",
-    "axios": "^1.6.7",
+    "axios": "^1.7.3",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "ioredis": "^5.4.1",
     "passport-http": "^0.3.0",
     "passport-http-bearer": "^1.0.1",
+    "passport-jwt": "^4.0.1",
     "passport-oauth2": "^1.8.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
@@ -56,6 +58,7 @@
     "@types/node": "^20.3.1",
     "@types/passport-http": "^0.3.11",
     "@types/passport-http-bearer": "^1.0.41",
+    "@types/passport-jwt": "^4.0.1",
     "@types/passport-oauth2": "^1.4.17",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
