--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "libvips": "8.14.3"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.637.0",
     "@nestjs-modules/ioredis": "^2.0.2",
     "@nestjs/axios": "^3.0.2",
     "@nestjs/common": "^10.0.0",
@@ -49,12 +50,13 @@
     "ts-case-convert": "^2.0.7"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.0.0",
+    "@nestjs/cli": "^10.4.4",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.3.1",
     "@types/passport-http": "^0.3.11",
     "@types/passport-http-bearer": "^1.0.41",
