--- a/package.json
+++ b/package.json
@@ -45,6 +45,9 @@
     "passport-http-bearer": "^1.0.1",
     "passport-jwt": "^4.0.1",
     "passport-oauth2": "^1.8.0",
+    "redis": "^4.7.0",
+    "redis-cli": "^2.1.2",
+    "redis-server": "^1.2.2",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "ts-case-convert": "^2.0.7"
