--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "doc": "node ./patch-compodoc.js && npx compodoc -p tsconfig.json -a assets"
+    "doc": "node ./patch-compodoc.js && npx compodoc -p tsconfig.json -a assets -d ./doc"
   },
   "config": {
     "libvips": "8.14.3"
