replace: infoteam idp

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,12 @@
       ],
       "@lib/prisma/*": [
         "libs/prisma/src/*"
+      ],
+      "@lib/infoteam-idp": [
+        "libs/infoteam-idp/src"
+      ],
+      "@lib/infoteam-idp/*": [
+        "libs/infoteam-idp/src/*"
       ]
     }
   }
