--- a/package.json
+++ b/package.json
@@ -100,7 +100,8 @@
       "^src/(.*)$": "<rootDir>/src/$1",
       "^test/(.*)$": "<rootDir>/test/$1",
       "^@lib/logger(|/.*)$": "<rootDir>/libs/logger/src/$1",
-      "^@lib/prisma(|/.*)$": "<rootDir>/libs/prisma/src/$1"
+      "^@lib/prisma(|/.*)$": "<rootDir>/libs/prisma/src/$1",
+      "^@lib/infoteam-idp(|/.*)$": "<rootDir>/libs/infoteam-idp/src/$1"
     },
     "coverageDirectory": "../coverage",
     "testEnvironment": "node",
