--- a/package.json
+++ b/package.json
@@ -101,7 +101,8 @@
       "^test/(.*)$": "<rootDir>/test/$1",
       "^@lib/logger(|/.*)$": "<rootDir>/libs/logger/src/$1",
       "^@lib/prisma(|/.*)$": "<rootDir>/libs/prisma/src/$1",
-      "^@lib/infoteam-idp(|/.*)$": "<rootDir>/libs/infoteam-idp/src/$1"
+      "^@lib/infoteam-idp(|/.*)$": "<rootDir>/libs/infoteam-idp/src/$1",
+      "^@lib/file(|/.*)$": "<rootDir>/libs/file/src/$1"
     },
     "coverageDirectory": "../coverage",
     "testEnvironment": "node",
