--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,30 +18,14 @@
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
     "paths": {
-      "@lib/logger": [
-        "libs/logger/src"
-      ],
-      "@lib/logger/*": [
-        "libs/logger/src/*"
-      ],
-      "@lib/prisma": [
-        "libs/prisma/src"
-      ],
-      "@lib/prisma/*": [
-        "libs/prisma/src/*"
-      ],
-      "@lib/infoteam-idp": [
-        "libs/infoteam-idp/src"
-      ],
-      "@lib/infoteam-idp/*": [
-        "libs/infoteam-idp/src/*"
-      ],
-      "@lib/file": [
-        "libs/file/src"
-      ],
-      "@lib/file/*": [
-        "libs/file/src/*"
-      ]
+      "@lib/logger": ["libs/logger/src"],
+      "@lib/logger/*": ["libs/logger/src/*"],
+      "@lib/prisma": ["libs/prisma/src"],
+      "@lib/prisma/*": ["libs/prisma/src/*"],
+      "@lib/infoteam-idp": ["libs/infoteam-idp/src"],
+      "@lib/infoteam-idp/*": ["libs/infoteam-idp/src/*"],
+      "@lib/object": ["libs/object/src"],
+      "@lib/object/*": ["libs/object/src/*"]
     }
   }
 }
