--- a/package.json
+++ b/package.json
@@ -71,7 +71,8 @@
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
-    "jest": "^29.5.0",
+    "jest": "^29.7.0",
+    "object-lib": "^5.0.1",
     "prettier": "^3.0.0",
     "prisma": "^6.1.0",
     "prisma-dbml-generator": "^0.12.0",
@@ -103,7 +104,8 @@
       "^@lib/logger(|/.*)$": "<rootDir>/libs/logger/src/$1",
       "^@lib/prisma(|/.*)$": "<rootDir>/libs/prisma/src/$1",
       "^@lib/infoteam-idp(|/.*)$": "<rootDir>/libs/infoteam-idp/src/$1",
-      "^@lib/file(|/.*)$": "<rootDir>/libs/file/src/$1"
+      "^@lib/file(|/.*)$": "<rootDir>/libs/file/src/$1",
+      "^@lib/object(|/.*)$": "<rootDir>/libs/object/src/$1"
     },
     "coverageDirectory": "../coverage",
     "testEnvironment": "node",
