--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,9 @@ pids
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+
+/.direnv/
+/.envrc
+/flake.nix
+/flake.lock
