--- a/.github/ISSUE_TEMPLATE/bug-issue-template.yml
+++ b/.github/ISSUE_TEMPLATE/bug-issue-template.yml
@@ -2,7 +2,7 @@ name: Bug Issue Template
 description: An Issue Template for Bugs
 title: '[BUG] '
 labels: ['bug']
-projects: ['gsainfoteam/5','gsainfoteam/11']
+projects: ['gsainfoteam/5']
 assignees: []
 body:
   - type: textarea
