--- a/.github/ISSUE_TEMPLATE/documentation.yml
+++ b/.github/ISSUE_TEMPLATE/documentation.yml
@@ -2,7 +2,7 @@ name: Documentation Issue Template
 description: An Issue Template for Documentations
 title: '[Documentation] '
 labels: ['documentation']
-projects: ['gsainfoteam/5','gsainfoteam/11']
+projects: ['gsainfoteam/5']
 assignees: []
 body:
   - type: textarea
