--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/ms": "^2.1.0",
     "@types/multer": "^1.4.12",
     "@types/node": "^20.3.1",
     "@types/passport-http": "^0.3.11",
