[BUG] Group Search Fixes #146

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,7 +12,8 @@
     "Loggable",
     "metatype",
     "nestjs",
-    "noreply"
+    "noreply",
+    "ZIGGLE"
   ],
   "git.branchProtection": ["main"],
   "markdownlint.config": {
